--- a/web/package.json
+++ b/web/package.json
@@ -11,5 +11,11 @@
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
