--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,12 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.6",
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "formik": "^2.2.6",
+    "framer-motion": "^3.10.3",
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
