--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@feathersjs/client": "^4.5.11",
+    "@feathersjs/rest-client": "^4.5.11",
     "formik": "^2.2.6",
     "framer-motion": "^3.10.3",
     "next": "^10.0.8",
