--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^3.10.3",
     "next": "^10.0.8",
     "react": "^17.0.1",
+    "react-colorful": "^5.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
