--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.1.5",
     "@feathersjs/client": "^4.5.11",
     "@feathersjs/rest-client": "^4.5.11",
+    "date-fns": "^2.19.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.10.3",
     "next": "^10.0.8",
@@ -22,6 +23,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "prettier": "^2.2.1",
