--- a/api/package.json
+++ b/api/package.json
@@ -49,6 +49,7 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-hooks-common": "^5.0.5",
     "feathers-nedb": "^5.1.0",
     "helmet": "^4.4.1",
     "nedb": "^1.8.0",
